--- a/team.css
+++ b/team.css
@@ -51,7 +51,7 @@ html {
 
 #team-landing-page {
 	width: 100%;
-	background-image: url("./images/bg.png");
+	background-image: url("./images/radial.png");
 }
 
 #team-landing-page .title {
@@ -72,7 +72,7 @@ html {
 	width: 100%;
 	background-color: black;
 	color: white;
-	background-image: url("./images/bg.png");
+	background-image: url("./images/radial.png");
 }
 
 #nodal-officer h2 {
@@ -119,13 +119,14 @@ html {
 #core-team {
 	width: 100%;
 	color: white;
-	background-image: url("./images/bg.png");
+	background-image: url("./images/radial.png");
 }
 
 #core-team h2 {
 	font-size: 4rem;
 	color: white;
-	margin: 10px 0 40px 0;
+    text-align: center;
+	margin: 30px 0 80px 0;
 }
 
 .team-member-row {
@@ -175,13 +176,14 @@ html {
 #subcore-team {
 	width: 100%;
 	color: white;
-	background-image: url("./images/bg.png");
+	background-image: url("./images/radial.png");
 }
 
 #subcore-team h2 {
 	font-size: 4rem;
 	color: white;
-	margin: 10px 0 40px 0;
+	text-align: center;
+	margin: 30px 0 80px 0;
 }
 
 #subcore-team .core-member-container img {
@@ -223,13 +225,14 @@ html {
 #tribe-team {
 	width: 100%;
 	color: white;
-	background-image: url("./images/bg.png");
+	background-image: url("./images/radial.png");
 }
 
 #tribe-team h2 {
 	font-size: 4rem;
 	color: white;
-	margin: 10px 0 40px 0;
+	text-align: center;
+	margin: 30px 0 80px 0;
 }
 
 #tribe-team .core-member-container img {
@@ -271,13 +274,14 @@ html {
 #iic-team {
 	width: 100%;
 	color: white;
-	background-image: url("./images/bg.png");
+	background-image: url("./images/radial.png");
 }
 
 #iic-team h2 {
 	font-size: 4rem;
 	color: white;
-	margin: 10px 0 40px 0;
+	text-align: center;
+	margin: 30px 0 80px 0;
 }
 
 #iic-team .core-member-container img {
@@ -316,6 +320,31 @@ html {
 	transition: 0.2s ease-in;
 }
 
+footer {
+	width: 100%;
+	display: flex;
+	padding: 25px 70px;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	background-image: linear-gradient(to left, #91eae4, #86a8e7, #7f7fd5);
+}
+
+footer i {
+	font-size: 3rem;
+	margin: 0 20px;
+	color: white;
+	cursor: pointer;
+}
+
+footer i:hover {
+	font-size: 3rem;
+	margin: 0 20px;
+	color: indigo;
+	cursor: pointer;
+}
+
 /* MOBILE VIEW */
 
 @media only screen and (max-width: 768px) {
@@ -341,7 +370,7 @@ html {
 		width: 100%;
 		background-color: black;
 		color: white;
-		background-image: url("./images/bg.png");
+		background-image: url("./images/radial.png");
 	}
 
 	#nodal-officer h2 {
